--- a/SmartEmailResponder/SmartEmailResponder.csproj
+++ b/SmartEmailResponder/SmartEmailResponder.csproj
@@ -4,6 +4,8 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.4.0" />
+    <PackageReference Include="MailKit" Version="3.4.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup>
